[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmp"
version = "0.1.0"
description = "LLM prompt tool with clipboard and GitHub integration"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pyperclip",
    "PyGithub",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
llmp = "llmp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmp"]
